[gd_scene load_steps=2 format=3 uid="uid://c7c2uqto5b2lk"]

[ext_resource type="Script" uid="uid://dh6jkchk6rnf1" path="res://scripts/Card.gd" id="1_yiag5"]

[node name="Card" type="Panel"]
custom_minimum_size = Vector2(160, 160)
offset_right = 171.0
offset_bottom = 214.0
script = ExtResource("1_yiag5")

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NameLabel" type="Label" parent="Content"]
layout_mode = 2

[node name="CostLabel" type="Label" parent="Content"]
layout_mode = 2

[node name="ValueLabel" type="Label" parent="Content"]
layout_mode = 2
